--- a/app.playbook.yml
+++ b/app.playbook.yml
@@ -50,7 +50,8 @@
 
   - name: build webapp
     shell: mvn package
-    chdir: /home/app
+    args:
+      chdir: '/home/app'
 
   - name: Fetch webapp-file
     fetch:
